added code for performing the statistical test

--- a/linking_predictions.ipynb
+++ b/linking_predictions.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "import rdflib\n",
@@ -56,7 +56,7 @@
     "               sem.hasBeginTimeStamp: sem.Time,\n",
     "               sem.hasEndTimeStamp: sem.Time,\n",
     "               sem.hasTimeStamp: sem.Time,\n",
-    "               'what': sem.Event}"
+    "               'what': sem.Event}\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "from resources import clean_text\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
@@ -98,7 +98,12 @@
    "source": [
     "#This converts the data into the right format, by removing uneccessary tokens in text and converting the wikidata link to text\n",
     "from resources import uri_validator\n",
+    "\n",
     "graph = Graph()\n",
+    "place_set = set()\n",
+    "time_set = set()\n",
+    "actor_set = set()\n",
+    "\n",
     "\n",
     "event_mapping = {} #here the wikidata event urls and their names are saved\n",
     "failed_events= [] #Events that can't be found e.g. owl:sameAs need to be removed\n",
@@ -164,13 +169,23 @@
     "            graph.add((uri, RDF.value, Literal(row['value']))) #Add the value of the relation to the graph\n",
     "        graph.add((URIRef(event), row['property'], uri)) #Connect the event to the property\n",
     "\n",
-    "graph.serialize('Data/graphs/final_generated/Event_graph_all.ttl', format='turtle')\n",
+    "        if row['property'] == sem.hasActor:\n",
+    "            actor_set.add(event)\n",
+    "        elif row['property'] == sem.hasPlace:\n",
+    "            place_set.add(event)\n",
+    "        elif (row['property'] == sem.hasTime or row['property'] == sem.hasBeginTimeStamp or row['property'] == sem.hasEndTimeStamp ):\n",
+    "            time_set.add(event)\n",
+    "        else:\n",
+    "            print(f\"property not supported: {row['property']}\")\n",
+    "\n",
+    "\n",
+    "#graph.serialize('Data/graphs/final_generated/Event_graph_all.ttl', format='turtle')\n",
     "\n",
     "data= data[~data['Event'].isin(failed_events)] #remove the rows for which the event was not found\n",
     "#data['Event'] = data['Event'].map(event_mapping)\n",
     "#Check if this still is oke, it adds a list of events to the column event\n",
     "data = data.groupby(['URI','Identifier','Location', 'Time', 'Text']).agg({'Event': lambda x: list(x)}).reset_index(drop=False)\n",
-    "data.to_csv('Data/dataset_final_generated/ASRAEL_data_full_converted.csv')"
+    "#data.to_csv('Data/dataset_final_generated/ASRAEL_data_full_converted.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -894,13 +909,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "<module 'resources' from 'C:\\\\Users\\\\mike-\\\\Documents\\\\VU\\\\Eurecom\\\\KG_mapping\\\\resources.py'>"
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,13 +1033,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed 31 instances\n"
+      "Processed 32 instances\n"
      ]
     }
    ],
@@ -1038,39 +1053,36 @@
     "#Note: The tuple (\"western sanctions\", \"prevent\", \"scientific and technological progress of Iran\"), (\"enemies' maximum pressure\", \"prevent\", \"scientific and technological progress of Iran\"), is not really prevent, just kept it in for showing the result on this relation.\n",
     "\n",
     "tuples_data = (\n",
-    "            (\"Russia\", \"launch\", \"satellite\", 0), (\"launch\", \"location\", \"Kazakhstan\", 0), (\"launch\", \"time\", \"Tuesday\", 0), (\"satellite\", \"enable\", \"military surveillance\", 0),\n",
+    "            (\"Russia\", \"launch\", \"satellite\", \"None\", 0), (\"launch\", \"location\", \"Kazakhstan\", \"None\", 0), (\"launch\", \"time\", \"Tuesday\", \"None\", 0), (\"satellite\", \"enable\", \"military surveillance\", \"An Iranian satellite launched by Russia blasted off from Kazakhstan Tuesday and reached orbit amid controversy that Moscow might use it to boost its surveillance of military targets in Ukraine.\", 0),\n",
     "\n",
-    "               (\"Russia\", \"cause\", \"invasion of Ukraine\", 1), (\"invasion of Ukraine\", \"cause\", \"western sanctions\", 1), (\"western sanctions\", \"cause\", \"Russia's international isolation\", 1), (\"Russia\", \"intend\", \"find new clients\", 1),\n",
+    "               (\"Russia\", \"cause\", \"invasion of Ukraine\", \"None\", 1), (\"invasion of Ukraine\", \"cause\", \"western sanctions\", \"None\", 1), (\"western sanctions\", \"cause\", \"Russia's international isolation\", \"None\", 1), (\"Russia\", \"intend\", \"find new clients\", \"As Russia's international isolation grows following Western sanctions over its invasion of Ukraine, the Kremlin is seeking to pivot towards the Middle East, Asia and Africa and find new clients for its embattled space programme.\", 1),\n",
     "\n",
-    "               (\"Russian-Iranian bilateral cooperation\", \"enable\", \"implementation of new and even larger projects\", 2),\n",
+    "               (\"Russian-Iranian bilateral cooperation\", \"enable\", \"implementation of new and even larger projects\", \"Speaking at the Moscow-controlled Baikonur Cosmodrome in the Kazakh steppe, Russian space chief Yury Borisov hailed 'an important milestone in Russian-Iranian bilateral cooperation, opening the way to the implementation of new and even larger projects'.\", 2),\n",
     "\n",
-    "               (\"Russia\", \"launch\", \"satellite\", 3), (\"Iran\", \"launch\", \"satellite\", 3), (\"satellite\", \"enable\", \"a turning point for the start of a new interaction\", 3),\n",
+    "               (\"Iran Telecommunication\", \"minister\", \"Issa Zarepour\", \"None\", 3), (\"Issa Zarepour\", \"attended\", \"launch of the Khayyam satellite\", \"None\", 3), (\"satellite\", \"enable\", \"a turning point for the start of a new interaction\", \"Iran's Telecommunications Minister Issa Zarepour, who also attended the launch of the Khayyam satellite, called the event 'historic' and 'a turning point for the start of a new interaction in the field of space between our two countries'.\", 3),\n",
     "\n",
-    "               (\"western sanctions\", \"prevent\", \"scientific and technological progress of Iran\", 4), (\"enemies' maximum pressure\", \"prevent\", \"scientific and technological progress of Iran\", 4),\n",
+    "               (\"western sanctions\", \"not prevent\", \"scientific and technological progress of Iran\", \"None\", 4), (\"enemies' maximum pressure\", \"not prevent\", \"scientific and technological progress of Iran\", \"Nasser Kanani, the Iranian foreign ministry spokesman, said on Twitter that 'the brilliant path of scientific and technological progress of the Islamic republic of Iran continues despite sanctions and the enemies' maximum pressure'.\", 4),\n",
     "\n",
-    "               (\"satellite\", \"enable\", \"spy\", 5),\n",
+    "            (\"Iran\", \"maintained ties\", \"Moscow\", \"None\", 5), (\"Iran\", \"not criticized\", \"Ukraine invasion\", \"None\", 5), (\"Khayyam\", \"enable\", \"spy\", \"Iran, which has maintained ties with Moscow and refrained from criticism of the Ukraine invasion, has sought to deflect suspicions that Moscow could use Khayyam to spy on Ukraine.\", 5),\n",
     "\n",
-    "               (\"Russia's growing cooperation with Iran\", \"cause\", \"profound threat\", 6),\n",
+    "            (\"Washington\", \"respond\", \"launch\", \"None\", 6), (\"Russia's growing cooperation with Iran\", \"cause\", \"profound threat\", \"Responding to the launch, Washington said Russia's growing cooperation with Iran should be viewed as a 'profound threat'.\", 6),\n",
     "\n",
-    "               (\"Iran\", \"controls\", \"satellite\", 7), (\"controls\", \"time\", \"from day one\", 7),\n",
     "\n",
-    "               (\"satellite\", \"enable\", \"information\", 8), (\"third countries\", \"intend\", \"access information\", 8), (\"encrypted algorithm\", \"prevent\", \"access information\", 8), (\"satellite\", \"has\", \"encrypted algorithm\", 8),\n",
+    "               (\"satellite\", \"sends\", \"information\", \"None\", 7), (\"encrypted algorithm\", \"prevent\", \"third countries accessing information\", \"None\", 7), (\"satellite\", \"has\", \"encrypted algorithm\", \"'No third country is able to access the information' sent by the satellite due to its 'encrypted algorithm', it said.\", 7),\n",
     "\n",
-    "               (\"Iran\", \"intend\", \"salvage 2015 deal\", 9), (\"2015 deal\", \"prevent\", \"Iran's nuclear ambitions\", 9),\n",
+    "               (\"Iran\", \"intend\", \"salvage 2015 deal\", \"None\", 8), (\"2015 deal\", \"prevent\", \"Iran's nuclear ambitions\", \"Iran is currently negotiating with world powers, including Moscow, to salvage a 2015 deal aimed at reining in Tehran's nuclear ambitions.\", 8),\n",
     "\n",
-    "               (\"satellite\", \"contains\", \"ballistic missle technologies\", 10), (\"ballistic missle technologies\", \"enable\", \"delivery of nuclear warhead\", 10),\n",
+    "               (\"satellite\", \"contains\", \"ballistic missle technologies\", \"None\", 9), (\"ballistic missile technologies\", \"enable\", \"delivery of nuclear warhead\", \"Western governments worry that satellite launch systems incorporate technologies interchangeable with those used in ballistic missiles capable of delivering a nuclear warhead, something Iran has always denied wanting to build.\", 9),\n",
     "\n",
-    "               (\"Iran\", \"launch\", \"first military satellite\", 11), (\"first military satellite\", \"cause\", \"sharp rebuke from the United States\", 11),\n",
+    "               (\"Iran\", \"launch\", \"first military satellite\", \"None\", 10), (\"first military satellite\", \"orbit\", \"April 2020\", \"None\", 10), (\"first military satellite\", \"cause\", \"sharp rebuke from the United States\", \"Iran successfully put its first military satellite into orbit in April 2020, drawing a sharp rebuke from the United States.\", 10),\n",
     "\n",
-    "               (\"tensions with the West\", \"cause\", \"difficult situation\", 12),\n",
-    "\n",
-    "               (\"invasion of Ukraine\", \"cause\", \"tensions with the West\", 13), (\"tensions with the West\", \"cause\", \"difficult situation\", 13),\n",
+    "            (\"Borisov\", \"replaced\", \"Dmitry Rogozin\", \"None\", 11), (\"Borisov\", \"acknowledged\", \"difficult situation\", \"None\", 11), (\"tensions with the West\", \"cause\", \"difficult situation \", \"Borisov, who last month replaced bombastic nationalist Dmitry Rogozin as head of the Russian space agency, had acknowledged that the national space industry is in a 'difficult situation' amid tensions with the West.\", 11)\n",
     ")\n",
     "\n",
     "\n",
-    "created_dataset = pd.DataFrame(tuples_data, columns =['subject_values', 'predicate', 'object_values', 'instance'])\n",
+    "created_dataset = pd.DataFrame(tuples_data, columns =['subject_values', 'predicate', 'object_values', \"sentence\", 'instance'])\n",
     "\n",
-    "total_instances = gen_jointgt_input_format_multiple(created_dataset, 'Data/jointGT/manual_generated_for_test/article3.json')"
+    "total_instances = gen_jointgt_input_format_multiple(created_dataset, 'Data/jointGT/manual_generated_for_test/article4.json', sent_col=\"sentence\")"
    ],
    "metadata": {
     "collapsed": false,
