--- a/statistical_test.ipynb
+++ b/statistical_test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from statsmodels.stats import inter_rater as irr\n",
@@ -32,31 +32,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fleiss kappa for annotations\\article_adequacy.csv: 0.61\n",
+      "Fleiss kappa for group_ties\\article_adequacy.csv: 0.61\n",
       "wins: 58.3\n",
       "loses: 8.3\n",
       "ties: 33.3\n",
       "No significant difference is found with P value: 0.0703125\n",
       "\n",
-      "Fleiss kappa for annotations\\article_fluency.csv: 0.73\n",
+      "Fleiss kappa for group_ties\\article_fluency.csv: 0.73\n",
       "wins: 33.3\n",
       "loses: 16.7\n",
       "ties: 50.0\n",
       "No significant difference is found with P value: 0.6875\n",
       "\n",
-      "Fleiss kappa for annotations\\event_adequacy.csv: 0.60\n",
+      "Fleiss kappa for group_ties\\event_adequacy.csv: 0.60\n",
       "wins: 28.6\n",
       "loses: 0.0\n",
       "ties: 71.4\n",
       "No significant difference is found with P value: 0.5\n",
       "\n",
-      "Fleiss kappa for annotations\\event_fluency.csv: 1.00\n",
+      "Fleiss kappa for group_ties\\event_fluency.csv: 1.00\n",
       "wins: 71.4\n",
       "loses: 14.3\n",
       "ties: 14.3\n",
@@ -66,12 +66,12 @@
     }
    ],
    "source": [
-    "annotation_files = os.listdir('Data/annotations')\n",
+    "annotation_files = os.listdir('Data/annotations/group_ties')\n",
     "mapping = {\"comb\" : 2, \"base\" : 1, \"tie\": 0} #Convert the classes\n",
     "\n",
     "for file_path in annotation_files:\n",
     "\n",
-    "    file_path = os.path.join('Data/annotations', file_path)\n",
+    "    file_path = os.path.join('Data/annotations/group_ties', file_path)\n",
     "    file = pd.read_csv(file_path)\n",
     "    file=file.replace(mapping)\n",
     "\n",
@@ -117,22 +117,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 28,
    "outputs": [
     {
-     "data": {
-      "text/plain": "   Annotator_1 Annotator_2 Annotator_3 majority\n0          tie         tie        comb      tie\n1          tie         tie         tie      tie\n2         comb        comb        comb     comb\n3          tie         tie         tie      tie\n4         comb        comb         tie     comb\n5         base        base        base     base\n6         comb        comb        comb     comb\n7         comb         tie        comb     comb\n8         comb        comb        comb     comb\n9          tie         tie         tie      tie\n10        comb        comb        comb     comb\n11        comb         tie        comb     comb",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Annotator_1</th>\n      <th>Annotator_2</th>\n      <th>Annotator_3</th>\n      <th>majority</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>tie</td>\n      <td>tie</td>\n      <td>comb</td>\n      <td>tie</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>tie</td>\n      <td>tie</td>\n      <td>tie</td>\n      <td>tie</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>comb</td>\n      <td>comb</td>\n      <td>comb</td>\n      <td>comb</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>tie</td>\n      <td>tie</td>\n      <td>tie</td>\n      <td>tie</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>comb</td>\n      <td>comb</td>\n      <td>tie</td>\n      <td>comb</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>base</td>\n      <td>base</td>\n      <td>base</td>\n      <td>base</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>comb</td>\n      <td>comb</td>\n      <td>comb</td>\n      <td>comb</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>comb</td>\n      <td>tie</td>\n      <td>comb</td>\n      <td>comb</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>comb</td>\n      <td>comb</td>\n      <td>comb</td>\n      <td>comb</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>tie</td>\n      <td>tie</td>\n      <td>tie</td>\n      <td>tie</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>comb</td>\n      <td>comb</td>\n      <td>comb</td>\n      <td>comb</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>comb</td>\n      <td>tie</td>\n      <td>comb</td>\n      <td>comb</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "article_adequacy.csv\n",
+      "p-value base vs none: 0.375\n",
+      "p-value combined vs none: 0.01171875\n",
+      "\n",
+      "article_fluency.csv\n",
+      "p-value base vs none: 0.0078125\n",
+      "p-value combined vs none: 0.001953125\n",
+      "\n",
+      "event_adequacy.csv\n",
+      "p-value base vs none: 1.0\n",
+      "p-value combined vs none: 0.453125\n",
+      "\n",
+      "event_fluency.csv\n",
+      "p-value base vs none: 1.0\n",
+      "p-value combined vs none: 0.21875\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "file = pd.read_csv(\"Data/annotations/article_adequacy.csv\")\n",
-    "file['majority'] = file.mode(axis=1)[0]\n",
-    "file"
+    "#This is used to evaluate comb/base vs None. However, this is not suitable right now. (can be removed)\n",
+    "annotation_files = os.listdir('Data/annotations/ties_none')\n",
+    "mapping_comb = {\"comb\" : 2, \"tie\": 2, \"none\": 1, \"base\": 0} #Convert the classes\n",
+    "mapping_base = {\"base\" : 2, \"tie\": 2, \"none\": 1, \"comb\": 0} #Convert the classes\n",
+    "\n",
+    "for file in annotation_files:\n",
+    "\n",
+    "    print(file)\n",
+    "\n",
+    "    file_path = os.path.join('Data/annotations/ties_none', file)\n",
+    "    file = pd.read_csv(file_path)\n",
+    "    file['majority'] = file.mode(axis=1)[0]\n",
+    "\n",
+    "    file_comb = file.replace(mapping_comb)\n",
+    "    file_comb = file_comb[file_comb['majority'] != 0] #Only take combination into account\n",
+    "\n",
+    "    file_base = file.replace(mapping_base)\n",
+    "    file_base = file_base[file_base['majority'] != 0] #Only take combination into account\n",
+    "\n",
+    "    values_comb = file_comb['majority'].to_numpy()\n",
+    "    result_comb = sign_test(values_comb, mu0=1.1)[1]\n",
+    "\n",
+    "    values_base = file_base['majority'].to_numpy()\n",
+    "    result_base = sign_test(values_base, mu0=1.1)[1]\n",
+    "\n",
+    "    print(f\"p-value base vs none: {result_base}\")\n",
+    "    print(f\"p-value combined vs none: {result_comb}\\n\")"
    ],
    "metadata": {
     "collapsed": false,
