Fixed statistical test, as previously the test was defaulted to two-sided

--- a/statistical_test.ipynb
+++ b/statistical_test.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "from statsmodels.stats import inter_rater as irr\n",
     "from statsmodels.stats.descriptivestats import sign_test\n",
+    "from scipy.stats import binomtest\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os"
@@ -32,51 +33,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Fleiss kappa for group_ties\\article_adequacy.csv: 0.61\n",
-      "wins: 58.3\n",
-      "loses: 8.3\n",
-      "ties: 33.3\n",
-      "No significant difference is found with P value: 0.0703125\n",
-      "\n",
-      "------\n",
-      "(3.0, 0.0703125)\n",
-      "\n",
+      "wins: 58.3\t 7\n",
+      "loses: 8.3\t 1\n",
+      "ties: 33.3\t 4\n",
+      "A significant difference is found with P value: 0.04\n",
       "\n",
       "Fleiss kappa for group_ties\\article_fluency.csv: 0.73\n",
-      "wins: 33.3\n",
-      "loses: 16.7\n",
-      "ties: 50.0\n",
-      "No significant difference is found with P value: 0.6875\n",
-      "\n",
-      "------\n",
-      "(1.0, 0.6875)\n",
-      "\n",
+      "wins: 33.3\t 4\n",
+      "loses: 16.7\t 2\n",
+      "ties: 50.0\t 6\n",
+      "No significant difference is found with P value: 0.34\n",
       "\n",
       "Fleiss kappa for group_ties\\event_adequacy.csv: 0.60\n",
-      "wins: 28.6\n",
-      "loses: 0.0\n",
-      "ties: 71.4\n",
-      "No significant difference is found with P value: 0.5\n",
-      "\n",
-      "------\n",
-      "(1.0, 0.5)\n",
-      "\n",
+      "wins: 28.6\t 2\n",
+      "loses: 0.0\t 0\n",
+      "ties: 71.4\t 5\n",
+      "No significant difference is found with P value: 0.25\n",
       "\n",
       "Fleiss kappa for group_ties\\event_fluency.csv: 1.00\n",
-      "wins: 71.4\n",
-      "loses: 14.3\n",
-      "ties: 14.3\n",
-      "No significant difference is found with P value: 0.21875\n",
-      "\n",
-      "------\n",
-      "(2.0, 0.21875)\n",
-      "\n",
+      "wins: 71.4\t 5\n",
+      "loses: 14.3\t 1\n",
+      "ties: 14.3\t 1\n",
+      "No significant difference is found with P value: 0.11\n",
       "\n"
      ]
     }
@@ -111,24 +96,60 @@
     "\n",
     "    ties = 1.0-wins-loses\n",
     "\n",
-    "    print(f\"wins: {(wins*100):.1f}\")\n",
-    "    print(f\"loses: {(loses*100):.1f}\")\n",
-    "    print(f\"ties: {(ties*100):.1f}\")\n",
+    "    number_of_wins = len(file[file['majority'] == 2])\n",
+    "    number_of_loses = len(file[file['majority'] == 1])\n",
+    "    number_of_ties = len(file[file['majority'] == 0])\n",
     "\n",
-    "    values = file['majority'][file['majority']>0].to_numpy()\n",
-    "    result_full = sign_test(values, mu0=1.1)\n",
-    "    result = sign_test(values, mu0=1.1)[1]\n",
+    "    print(f\"wins: {(wins*100):.1f}\\t {number_of_wins}\")\n",
+    "    print(f\"loses: {(loses*100):.1f}\\t {number_of_loses}\")\n",
+    "    print(f\"ties: {(ties*100):.1f}\\t {number_of_ties}\")\n",
     "\n",
-    "    if result <= 0.05:\n",
-    "        print(f\"A significant difference is found with P value: {result}\\n\")\n",
+    "    result = binomtest(number_of_wins, number_of_wins+number_of_loses, alternative='greater')\n",
+    "\n",
+    "    if result.pvalue <= 0.05:\n",
+    "        print(f\"A significant difference is found with P value: {result.pvalue:.2f}\\n\")\n",
     "\n",
     "    else:\n",
-    "        print(f\"No significant difference is found with P value: {result}\\n\")\n",
-    "\n",
-    "    print(\"------\")\n",
-    "    print(result_full)\n",
-    "    print(\"\\n\")\n"
+    "        print(f\"No significant difference is found with P value: {result.pvalue:.2f}\\n\")\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.03515625"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "result.pvalue"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
