Updated the readme, cleared the output of the (renamed) KG_generation notebook

--- a/KG_generation.ipynb
+++ b/KG_generation.ipynb
@@ -83,18 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error when searching for event: http://www.wikidata.org/entity/Q100919128\n",
-      "Error when searching for event: http://www.wikidata.org/entity/Q113945893\n",
-      "Error when searching for event: http://www.wikidata.org/entity/Q105597606\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "#This converts the data into the right format, by removing uneccessary tokens in text and converting the wikidata link to text\n",
     "from resources import uri_validator\n",
@@ -190,24 +180,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/1122 [00:00<?, ?it/s]C:\\Users\\mike-\\Documents\\VU\\Eurecom\\KG_mapping\\venv\\lib\\site-packages\\transformers\\generation\\utils.py:1313: UserWarning: Using `max_length`'s default (200) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
-      "  warnings.warn(\n",
-      "  0%|          | 0/1122 [00:11<?, ?it/s]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Perform predictions, execute cell below to combine predictions and generate the graph at once.\n",
     "import pandas as pd\n",
@@ -253,30 +234,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 19578/19578 [00:25<00:00, 754.16it/s] \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<Graph identifier=N6eaa17f7cbe443be835e69bcc063e464 (<class 'rdflib.graph.Graph'>)>"
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "from nltk import tokenize\n",
@@ -367,39 +333,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#Used for drawing the graph\n",
-    "import networkx as nx\n",
-    "from rdflib.extras.external_graph_libs import rdflib_to_networkx_multidigraph\n",
-    "\n",
-    "nx_graph = rdflib_to_networkx_multidigraph(graph)\n",
-    "pos = nx.spring_layout(nx_graph, scale=2)\n",
-    "\n",
-    "edge_labels = nx.get_edge_attributes(nx_graph, 'r')\n",
-    "nx.draw_networkx_edge_labels(nx_graph, pos, edge_labels=edge_labels)\n",
-    "nx.draw(nx_graph, with_labels=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "# Merge same entities\n",
-    "### Entity coreference resolution"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -434,32 +375,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 86/86 [03:39<00:00,  2.56s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of failed mentions: 1863\n",
-      "Number of double matches: 0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<Graph identifier=Nc930a7b4451b4f59b3729ad19eb3628d (<class 'rdflib.graph.Graph'>)>"
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "graph = Graph()\n",
     "graph.parse('Data/graphs/final_generated/eag_complete.ttl')\n",
@@ -548,7 +465,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -567,7 +485,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Query the graph: extract triples without using graph search algorithm\n",
+    "# Query the graph: extract triples based on the number of incoming edges of a node\n",
     "## Extract: time, place, actor, contentLocation, contentReferenceTime"
    ],
    "metadata": {
@@ -580,16 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<Graph identifier=N9b06690c3d16492aac5f0cc58fc80f98 (<class 'rdflib.graph.Graph'>)>"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "import pandas as pd\n",
@@ -621,11 +530,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "#Extract 4W's from a event\n",
-    "event_uri = \"http://www.wikidata.org/entity/Q104705419\"\n",
+    "event_uri = \"http://www.wikidata.org/entity/Q105477226\"\n",
     "query = \"\"\"\n",
     "SELECT ?event_name ?Time ?place ?actor ?beginTime ?endTime ?timeStamp where {\n",
     "\t?event a  sem:Event;\n",
@@ -666,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "query = \"\"\"\n",
@@ -693,19 +602,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "event_name - [rdflib.term.Literal('2021 storming of the United States Capitol')]\n",
-      "Time - [rdflib.term.Literal('2021-01-06T00:00:00+00:00', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#dateTime'))]\n",
-      "place - [rdflib.term.Literal('Point(-77.009166666 38.889722222)', datatype=rdflib.term.URIRef('http://www.opengis.net/ont/geosparql#wktLiteral')), rdflib.term.Literal('United States of America'), rdflib.term.Literal('United States Capitol'), rdflib.term.Literal('Washington, D.C.')]\n",
-      "actor - [rdflib.term.Literal('Proud Boys')]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "for key, value in four_W.items():\n",
     "    print(f\"{key} - {value}\")"
@@ -713,13 +611,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "selected_nodes = {\"mentions\": []}\n",
@@ -752,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "#First, extract all the mentions from the sentences\n",
@@ -785,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "#Now, find the biggest cluster\n",
@@ -859,39 +758,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'mentions': [['addressed', 'causes', 'stormed'],\n  ['died', 'causes', 'shot'],\n  ['measures', 'enables', 'removing']],\n 'event_name': '2021 storming of the United States Capitol',\n 'Time': '2021-01-06',\n 'place': 'United States of America',\n 'actor': 'Proud Boys'}"
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "clusters"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "selected_nodes"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 5 instances\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from resources import gen_mapping_dict\n",
     "mapping_dict, _ = gen_mapping_dict('Data/jointGT/events/events_combined.json')"
@@ -899,7 +797,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -918,40 +817,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<module 'resources' from 'C:\\\\Users\\\\mike-\\\\Documents\\\\VU\\\\Eurecom\\\\KG_mapping\\\\resources.py'>"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sys, importlib\n",
-    "importlib.reload(sys.modules['resources'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 6 instances\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from resources import convert_selected_triples_to_jointgt\n",
     "import os\n",
@@ -961,7 +828,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -985,19 +853,21 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 1800 instances\n",
-      "Processed 201 instances\n",
-      "Processed 95 instances\n"
-     ]
-    }
+   "cell_type": "markdown",
+   "source": [
+    "## For genenerating the train, validation, and test data for the JointGT model"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "#Now convert rebel relationship data to JointGT input format\n",
     "from resources import gen_jointgt_input_format, gen_mapping_dict\n",
@@ -1015,7 +885,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -1060,25 +931,28 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 32 instances\n"
-     ]
-    }
+   "cell_type": "markdown",
+   "source": [
+    "## Generate the input format for the JointGT model with the data from the manually annotated article"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "## Take the retrieved triples, and generate an input format for JointGT\n",
     "#For now just create the triples by hand\n",
     "#Changed 1 \"pandemic\" to \"Covid-19 pandemic\"\n",
     "import pandas as pd\n",
     "from resources import gen_jointgt_input_format_multiple\n",
-    "\n",
-    "#Note: The tuple (\"western sanctions\", \"prevent\", \"scientific and technological progress of Iran\"), (\"enemies' maximum pressure\", \"prevent\", \"scientific and technological progress of Iran\"), is not really prevent, just kept it in for showing the result on this relation.\n",
     "\n",
     "tuples_data = (\n",
     "            (\"Russia\", \"launch\", \"satellite\", \"None\", 0), (\"launch\", \"location\", \"Kazakhstan\", \"None\", 0), (\"launch\", \"time\", \"Tuesday\", \"None\", 0), (\"satellite\", \"enable\", \"military surveillance\", \"An Iranian satellite launched by Russia blasted off from Kazakhstan Tuesday and reached orbit amid controversy that Moscow might use it to boost its surveillance of military targets in Ukraine.\", 0),\n",
@@ -1115,37 +989,27 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## To generate data for events with the 4W relationships"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 5 instances\n",
-      "Processed 5 instances\n",
-      "Processed 7 instances\n",
-      "Processed 7 instances\n",
-      "Processed 6 instances\n",
-      "Processed 6 instances\n",
-      "Processed 6 instances\n",
-      "Processed 7 instances\n",
-      "Processed 6 instances\n",
-      "Processed 7 instances\n",
-      "Processed 7 instances\n",
-      "Processed 6 instances\n",
-      "Processed 7 instances\n",
-      "Done and saved\n",
-      "Processed 13 events\n",
-      "Saved at: test\\event_combined.json\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "#This generates the input format for the JointGT model from all the 4W events in the graph.\n",
     "#A list with events of interest can also be passed\n",
@@ -1156,19 +1020,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
