Updated files to extract intend relations, and update them in the 'test' file.

--- a/mapping_rebel_data.ipynb
+++ b/mapping_rebel_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "#Used for data that is already split into trigger1, trigger2 and label\n",
@@ -17,6 +17,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-10-04T11:52:29.623381900Z",
+     "start_time": "2023-10-04T11:52:29.609215500Z"
     }
    }
   },
@@ -131,25 +135,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-04T11:52:34.190308Z",
+     "start_time": "2023-10-04T11:52:33.261659Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cause      46\n",
+      "intend     28\n",
+      "enable     18\n",
+      "prevent    16\n",
+      "Name: label, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "train_data = pd.read_csv('Data/rebel_v2/data/new_split/train.csv').drop(['Unnamed: 0'], axis=1)\n",
     "val_data = pd.read_csv('Data/rebel_v2/data/new_split/val.csv').drop(['Unnamed: 0'], axis=1)\n",
     "test_data = pd.read_csv('Data/rebel_v2/data/new_split/test.csv').drop(['Unnamed: 0'], axis=1)\n",
+    "intend_data = pd.read_csv('Data/rebel_v2/data/intend_files/extracted_intend.csv')\n",
+    "\n",
+    "#Previously the testset containd synthetic 'intend' relations, these need to be removed and replaced by true non-synthetic samples.\n",
+    "test_data = test_data[test_data['label'] != 'intend']\n",
+    "test_data = pd.concat([test_data, intend_data]).reset_index(drop=True).sample(frac=1) #Append, and shuffle\n",
+    "\n",
+    "print(test_data['label'].value_counts())\n",
+    "\n",
     "\n",
     "train_data = convert_to_rebel(train_data)\n",
     "val_data = convert_to_rebel(val_data)\n",
     "test_data = convert_to_rebel(test_data)\n",
     "\n",
-    "train_data.to_csv('Data/rebel_v2/data/new_split/train_rebel.csv')\n",
-    "val_data.to_csv('Data/rebel_v2/data/new_split/val_rebel.csv')\n",
-    "test_data.to_csv('Data/rebel_v2/data/new_split/test_rebel.csv')"
+    "#train_data.to_csv('Data/rebel_v2/data/new_split/train_rebel.csv')\n",
+    "#val_data.to_csv('Data/rebel_v2/data/new_split/val_rebel.csv')\n",
+    "#test_data.to_csv('Data/rebel_v2/data/new_split/test_rebel.csv')"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-10-04T12:45:37.765117800Z",
+     "start_time": "2023-10-04T12:45:37.707993700Z"
     }
    }
   },
