Cleaned some code, and updated confusion matrix

--- a/KG_generation.ipynb
+++ b/KG_generation.ipynb
@@ -853,6 +853,21 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-07T10:37:08.958185100Z",
+     "start_time": "2023-10-07T10:37:08.926905200Z"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "## For genenerating the train, validation, and test data for the JointGT model"
@@ -866,8 +881,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed 16095 instances\n",
+      "Processed 1800 instances\n",
+      "Processed 201 instances\n",
+      "Processed 108 instances\n"
+     ]
+    }
+   ],
    "source": [
     "#Now convert rebel relationship data to JointGT input format\n",
     "from resources import gen_jointgt_input_format, gen_mapping_dict\n",
@@ -887,6 +913,10 @@
     "pycharm": {
      "name": "#%%\n",
      "is_executing": true
+    },
+    "ExecuteTime": {
+     "end_time": "2023-10-07T10:37:10.633856100Z",
+     "start_time": "2023-10-07T10:37:09.928934500Z"
     }
    }
   },
