--- a/mapping_rebel_data.ipynb
+++ b/mapping_rebel_data.ipynb
@@ -59,7 +59,7 @@
     "#total.to_csv('Data/rebel_v2/data/rebel_merged_non_synthetic.csv')\n",
     "\n",
     "rest_data, test_data = train_test_split(total, test_size=0.15, random_state=1, shuffle=True)\n",
-    "#test_data.to_csv('Data/rebel_v2/data/new_split/test.csv')\n"
+    "test_data.to_csv('Data/rebel_v2/data/new_split/test_old.csv')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -143,14 +143,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-04T11:52:34.190308Z",
-     "start_time": "2023-10-04T11:52:33.261659Z"
+     "end_time": "2023-10-07T10:36:18.595166400Z",
+     "start_time": "2023-10-07T10:36:17.906481500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -162,18 +162,29 @@
       "prevent    16\n",
       "Name: label, dtype: int64\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'convert_to_rebel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[2], line 13\u001B[0m\n\u001B[0;32m      9\u001B[0m test_data\u001B[38;5;241m.\u001B[39mto_csv(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mData/rebel_v2/data/new_split/test.csv\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28mprint\u001B[39m(test_data[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlabel\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mvalue_counts())\n\u001B[1;32m---> 13\u001B[0m train_data \u001B[38;5;241m=\u001B[39m \u001B[43mconvert_to_rebel\u001B[49m(train_data)\n\u001B[0;32m     14\u001B[0m val_data \u001B[38;5;241m=\u001B[39m convert_to_rebel(val_data)\n\u001B[0;32m     15\u001B[0m test_data \u001B[38;5;241m=\u001B[39m convert_to_rebel(test_data)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'convert_to_rebel' is not defined"
+     ]
     }
    ],
    "source": [
     "train_data = pd.read_csv('Data/rebel_v2/data/new_split/train.csv').drop(['Unnamed: 0'], axis=1)\n",
     "val_data = pd.read_csv('Data/rebel_v2/data/new_split/val.csv').drop(['Unnamed: 0'], axis=1)\n",
-    "test_data = pd.read_csv('Data/rebel_v2/data/new_split/test.csv').drop(['Unnamed: 0'], axis=1)\n",
+    "test_data = pd.read_csv('Data/rebel_v2/data/new_split/test_old.csv').drop(['Unnamed: 0'], axis=1)\n",
     "intend_data = pd.read_csv('Data/rebel_v2/data/intend_files/extracted_intend.csv')\n",
     "\n",
     "#Previously the testset containd synthetic 'intend' relations, these need to be removed and replaced by true non-synthetic samples.\n",
     "test_data = test_data[test_data['label'] != 'intend']\n",
     "test_data = pd.concat([test_data, intend_data]).reset_index(drop=True).sample(frac=1) #Append, and shuffle\n",
-    "\n",
+    "test_data.to_csv('Data/rebel_v2/data/new_split/test.csv')\n",
     "print(test_data['label'].value_counts())\n",
     "\n",
     "\n",
@@ -191,8 +202,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-10-04T12:45:37.765117800Z",
-     "start_time": "2023-10-04T12:45:37.707993700Z"
+     "end_time": "2023-10-07T10:36:20.563819Z",
+     "start_time": "2023-10-07T10:36:20.023264Z"
     }
    }
   },
